namespace Infnet.PesqMgm.Domain.Pesquisas;

public enum PerfilUsuario
{
    Gestor,
    Respondente,
    LeitorDeRelatorios
}