namespace Infnet.PesqMgm.Domain.Pesquisas;

public enum PesquisaStatus
{
    Rascunho,
    Ativa,
    Encerrada,
    Cancelada
}