@startuml GestaoPesquisas

' Diagrama de classes inicial para o contexto "Gestao de Pesquisas"
' Arquivo gerado por GitHub Copilot

skinparam classAttributeIconSize 0

package "Digrama de Classes" {

  class Pesquisa <<Entity>> {
    - Id: Guid
    - Titulo: string
    - Descricao: string
    - Status: PesquisaStatus
    - Perguntas: List<Pergunta>
    - Gestor: Usuario
  }
  note right of Pesquisa
    Entidade principal que agrupa a sondagem.
  end note
  enum PesquisaStatus {
    Rascunho
    Ativa
    Concluida
    Cancelada
  }
  class Usuario <<Entity>> {
    - Id: Guid
    - Nome: string
    - Email: string
    - Perfil: PerfilUsuario
  }
  note right of Usuario
    Entidade que representa um usuário do sistema. 
    O usuario pode ser Gestor, LeitordeRelatorios ou Respondente.
  end note
  enum PerfilUsuario {
    Gestor
    LeitordeRelatorios
    Respondente
  }
  class Pergunta <<ValueObject>> {
    - Texto: string
    - Opcoes: List<String>
  }
  class Resposta <<ValueObject>> {
    - Pesquisa: Pesquisa
    - Selecao: List<RespostaItem>
  }
  note top of Resposta
    É um objeto de valor, pois somente os 
    valores da resposta importam para o sistema. 
    O sistema não se importa com a identidade 
    da resposta e ela nao é mutável.
  end note
  class RespostaItem <<ValueObject>> {
    - OpcaoSelecionada: string
  }
  class ResultadoSumarizado <<ValueObject>> {
    - Pesquisa: Pesquisa
    - UsuariosLeitores: List<Usuario>
    - DadosConsolidados: string
  }
  note bottom of ResultadoSumarizado
    É um objeto de valor uma vez que representa 
    dados consolidados de uma pesquisa, ou seja, 
    somente os valores importam para o sistema. 
    Ele não é mutável e não tem identidade própria. 
    É um agregado da Pesquisa.
  end note


Usuario "1" o-- "0..*" Pesquisa : responsável por
Pesquisa "1" *-- "0..*" Pergunta : contém
Pesquisa "1" *-- "0..*" Resposta : possui
Resposta "1" *-- "0..*" RespostaItem : contém
Usuario "1" --> "1" Resposta : preenche
Pesquisa "1" -- "0..*" ResultadoSumarizado : possui histórico de

@enduml